fix(admin): harden analytics access and repair moderation regressions
Lock down admin analytics by passing the authenticated admin user through the controller/service boundary and enforcing role checks before analytics queries run.

Prevent bearer token leakage in audit logs by replacing unsafe admin action descriptions with explicit safe text and sanitizing secret-like values before persistence.

Fix month-scoped flag review behavior so historical analytics views only act on pending flags inside the selected period instead of newer flags from other months.

Harden analytics validation for invalid month and year values, clean up corrupted admin analytics UI copy, and refresh backend coverage for admin auth, audit logging, browsing tests, and scoped moderation behavior.